[package]
name = "creative-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher"] }
bevy-inspector-egui = "0.32.0"
bevy_flycam = "0.16.1"
bevy_pancam = "0.18.0"
bevy_rapier3d = "0.31.0"
bevy_scene_hot_reloading = "0.1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3
